[package]
name = "rewe"
version = "0.2.1"
edition = "2021"
authors = ["AdriDevelopsThings <contact@adridoesthings.com>"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/rewe_rs"
license = "MIT"
description = "A rewe mobile api implementation for rust"
categories = ["api-bindings"]

[lib]
name = "rewe"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]


[dependencies]
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.14", features = ["json"], default-features = false }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros"] }
